# wgpu_test

./: Cargo.toml  build.rs  index.html
src/: camera.rs  instance.rs  lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
